# sov

./: .gitignore  GRANT.md  README.html  README.md  SECURITY.md  STATUS.md  july18.html  july19.html  typos.toml
.github/: RELEASE-0.1.85.md  (+12 more)
chain/: Cargo.toml  Dockerfile  README.md  deny.toml
chain/.cargo/: audit.toml
chain/contracts/: Cargo.toml  README.md
chain/contracts/.cargo/: config.toml
chain/contracts/counter/: Cargo.toml
chain/contracts/counter/src/: lib.rs
chain/contracts/sov-sdk/: Cargo.toml
chain/contracts/sov-sdk/src/: lib.rs
chain/crates/chain/: Cargo.toml
chain/crates/chain/src/: blockchain.rs  genesis.rs  lib.rs
chain/crates/compliance/: Cargo.toml
chain/crates/compliance/src/: controls.rs  lib.rs  multisig.rs
chain/crates/crypto/: Cargo.toml
chain/crates/crypto/src/: keys.rs  lib.rs  merkle.rs  signature.rs
chain/crates/governance/: Cargo.toml
chain/crates/governance/src/: lib.rs
chain/crates/intents/: Cargo.toml
chain/crates/intents/src/: lib.rs
chain/crates/mempool/: Cargo.toml
chain/crates/mempool/src/: lib.rs
chain/crates/mining/: Cargo.toml
chain/crates/mining/src/: difficulty.rs  lib.rs  work.rs
chain/crates/network/: Cargo.toml
chain/crates/network/src/: lib.rs  message.rs  pq.rs  tcp.rs  transport.rs
chain/crates/node/: Cargo.toml
chain/crates/node/src/: lib.rs  main.rs  node.rs
chain/crates/pow/: Cargo.toml
chain/crates/pow/src/: algorithm.rs  lib.rs  seal.rs  target.rs
chain/crates/primitives/: Cargo.toml
chain/crates/primitives/src/: account.rs  amount.rs  hash.rs  height.rs  lib.rs  signing_domain.rs
chain/crates/redteam/: Cargo.toml  README.md
chain/crates/redteam/examples/: genwallet.rs
chain/crates/redteam/src/: backdoor.rs  funded.rs  gauntlet.rs  lib.rs  live.rs  main.rs
chain/crates/reserve/: Cargo.toml
chain/crates/reserve/src/: assumptions.rs  constants.rs  emission.rs  error.rs  float.rs  lib.rs  provenance.rs
chain/crates/rpc/: Cargo.toml  build.rs
chain/crates/rpc/src/: client.rs  daemon.rs  lib.rs  p2p.rs  sync_status.rs
chain/crates/rpc/tests/: block_template.rs  client.rs  daemon.rs  p2p.rs  rpc.rs  shielded_wallet.rs
chain/crates/rpc/tests/vectors/: block.json  state.json  stf.json
chain/crates/runtime/: Cargo.toml
chain/crates/runtime/src/: execution.rs  gas.rs  lib.rs
chain/crates/shielded/: Cargo.toml
chain/crates/shielded-pq/: Cargo.toml
chain/crates/shielded-pq/fuzz/: .gitignore  Cargo.toml
chain/crates/shielded-pq/fuzz/fuzz_targets/: fuzz_bundle_decode.rs  fuzz_note_ciphertext_decode.rs  fuzz_proof_decode.rs
chain/crates/shielded-pq/src/: air.rs  auth.rs  bundle.rs  domains.rs  encrypt.rs  hash.rs  lib.rs  note.rs  proof_frame.rs  prover.rs  tree.rs  wire.rs
chain/crates/shielded-pq/tests/: decode_hardening.rs  kat.rs
chain/crates/shielded/src/: address.rs  codec.rs  keys.rs  lib.rs  pool.rs  state.rs  store.rs  transfer.rs  wallet.rs
chain/crates/state/: Cargo.toml
chain/crates/state/src/: account.rs  ledger.rs  lib.rs  smt.rs  vault.rs
chain/crates/types/: Cargo.toml
chain/crates/types/src/: block.rs  lib.rs  receipt.rs  transaction.rs
chain/crates/verify/: Cargo.toml
chain/crates/verify/src/: invariants.rs  lib.rs
chain/crates/verify/tests/: chaos.rs  conformance.rs  fault_injection.rs  kat.rs  properties.rs  replay.rs
chain/crates/vm/: Cargo.toml
chain/crates/vm/src/: lib.rs  storage.rs
chain/crates/vm/tests/: contract.rs
chain/crates/wallet/: Cargo.toml
chain/crates/wallet/src/: hd.rs  lib.rs
chain/docs/: bip-adoption.md  improvements-ledger.md  monetary-policy.md  pq-shielded-design.md  proofs.md  quantum-posture.md  reproducible-builds.md  security-review.md  shielded-runbook.md  simulation.md  state-transition.md  testnet-plan.md  vm-and-token-composability.md
chain/fuzz/: Cargo.toml  README.md
chain/fuzz/fuzz_targets/: account_decode.rs  accountid_validate.rs  block_decode.rs  signedtx_decode.rs
chain/simnet/: chain-spec.json
chain/simnet/artifacts/: contract.hex  contract.wasm  contract.wat
chain/simnet/artifacts/blocks/: block-00001.json  block-00002.json  block-00003.json  block-00004.json  block-00005.json
chain/simnet/artifacts/txs/: 000-transfer-c70d02303ae8.json  001-token-issue-fd307d8b883b.json  002-htlc-lock-457af4c0af61.json  003-htlc-claim-725cfec648f7.json  004-deploy-5a09f51fdbbc.json  005-transfer-825663db3f25.json  006-token-transfer-477bc6c30d04.json  007-htlc-lock-974e8b9a939d.json  008-htlc-claim-8f453ac6e4bb.json  009-intent-offer.json  009-intent-settle-e653c13b149a.json  010-call-e6f782bf1b15.json  011-transfer-0a7ab993251d.json  012-token-transfer-02b99239b395.json  013-htlc-lock-214ae5264fd0.json  014-htlc-claim-53e582dcecc3.json  015-intent-offer.json  015-intent-settle-afd89f94a1ab.json  016-call-fb6903f49881.json  017-transfer-2ff1e147c52c.json  018-token-transfer-273501a02027.json  019-htlc-lock-c81bfa64f7a9.json  020-htlc-claim-343cf782ea3f.json  021-intent-offer.json  021-intent-settle-ba69461aa61d.json  022-call-02e0f586ad62.json  deshield-d0813ffcca8c.json  shield-b74c0352ea7f.json
chain/specs/: README.md  genesis.html  mainnet.json  tax-accounts.md  testnet-1.json
chain/testnet/: RUNBOOK.md  chain-spec.json  sov-rpcd.service
node/: Cargo.toml  README.md
node/.cargo/: audit.toml
node/src/: gui.rs  main.rs  vault.rs
redteam-gui/: Cargo.toml
redteam-gui/src/: main.rs
tools/conformance/: Cargo.toml  README.md
tools/conformance/assets/: counter.wasm  dashboard.html
tools/conformance/src/: main.rs
tools/e2e-vm/: Cargo.toml  README.md  ssh-hosts.example.json
tools/e2e-vm/src/: backend.rs  main.rs  net.rs  report.rs  rpc.rs  steps.rs  util.rs
tools/sov-stratum/: Cargo.toml  README.md
tools/sov-stratum/.cargo/: audit.toml
tools/sov-stratum/src/: job.rs  main.rs  share.rs
tools/sov-stratum/tests/: stratum_protocol.rs
tools/tx-cannon/: Cargo.toml
tools/tx-cannon/src/: logic.rs  main.rs
xus-miner/: Cargo.toml  README.md
xus-miner/.cargo/: audit.toml
xus-miner/src/: gui.rs  main.rs
xus-miner/tests/: miner_protocol.rs
(+76 files in other folders)
