[package]
name = "sov-conformance"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Live two-node conformance sweep: drives every SOV transaction type against one node and verifies validity + cross-node agreement on the other."

# Standalone tool — intentionally NOT a member of the chain workspace, so it never
# affects `chain/` builds, tests, or CI. It depends on the real chain crates by path
# (same signing, ids, and RPC client the node uses — no reimplemented consensus).
[[bin]]
name = "sov-conformance"
path = "src/main.rs"

[dependencies]
sov-rpc = { path = "../../chain/crates/rpc" }
sov-crypto = { path = "../../chain/crates/crypto" }
sov-wallet = { path = "../../chain/crates/wallet" }
sov-types = { path = "../../chain/crates/types" }
sov-primitives = { path = "../../chain/crates/primitives" }
sov-state = { path = "../../chain/crates/state" }
sov-intents = { path = "../../chain/crates/intents" }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
# Memory hygiene: the wallet seed / recovery phrase / derived buffers and the raw
# HTTP request body carrying them are wiped on drop (mirrors tools/tx-cannon).
zeroize = "1"

[lints.rust]
unsafe_code = "forbid"
