[package]
name = "sov-crypto"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Signing and authenticated data structures for SOV: Ed25519 keys/signatures and Merkle roots."

[dependencies]
sov-primitives = { path = "../primitives" }
ed25519-dalek = "2"
getrandom = "0.2"
borsh.workspace = true
serde.workspace = true
hex.workspace = true
thiserror.workspace = true
fips204 = "0.4.6"
blake3.workspace = true

[dev-dependencies]
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
