[package]
name = "sov-intents"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "NEAR-style intents for SOV: a user signs one intent; solvers settle it on-chain against available liquidity."

[dependencies]
sov-primitives = { path = "../primitives" }
sov-crypto = { path = "../crypto" }
borsh.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
