[package]
name = "sov-redteam"
version = "0.1.0"
edition = "2021"
description = "Standalone adversarial red-team harness: throws theoretical attacks (timewarp, forgery, post-quantum, low-hashpower reorg, supply) at the real SOV consensus code and reports which defenses held."

[[bin]]
name = "sov-redteam"
path = "src/main.rs"

[dependencies]
sov-primitives = { path = "../primitives" }
sov-crypto = { path = "../crypto" }
sov-types = { path = "../types" }
sov-state = { path = "../state" }
sov-mining = { path = "../mining" }
sov-verify = { path = "../verify" }
sov-chain = { path = "../chain" }
# Live-fire front-door probe: talk to a REAL running node over JSON-RPC. `sov-rpc`
# ships a std-only HTTP client (no extra transport deps), so this stays lightweight.
sov-rpc = { path = "../rpc" }
# Live-fire BACK-DOOR probe: join the P2P network as a real (hostile) peer and
# gossip forged blocks/txs over the encrypted Noise-XX + ML-KEM wire.
sov-network = { path = "../network" }
serde_json = "1"
