[package]
name = "sov-reserve"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SOV sovereign reserve modeling: deterministic emission/float/staking-lock and multi-asset reserve projections derived from real protocol constants and chain state under explicit, labeled assumptions."

[dependencies]
sov-primitives = { path = "../primitives" }
sov-mining = { path = "../mining" }
borsh.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
