[package]
name = "sov-rpc"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "JSON-RPC server for a SOV node (std-only HTTP) plus a known-answer-test vector generator for the JS/TS SDK."

[dependencies]
sov-primitives = { path = "../primitives" }
sov-crypto = { path = "../crypto" }
sov-types = { path = "../types" }
sov-state = { path = "../state" }
sov-intents = { path = "../intents" }
sov-chain = { path = "../chain" }
sov-node = { path = "../node" }
sov-network = { path = "../network" }
sov-mining = { path = "../mining" }
sov-pow = { path = "../pow" }
sov-runtime = { path = "../runtime" }
sov-shielded = { path = "../shielded" }
sov-wallet = { path = "../wallet" }
borsh.workspace = true
hex.workspace = true
sha2 = "0.10"
wat = "1"
getrandom = "0.2"
argon2 = "0.5"
chacha20poly1305 = "0.10"
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
# Cross-platform thread priority, used ONLY to drop the mining thread to the lowest OS
# priority — mirroring Zcash's `THREAD_PRIORITY_LOWEST` miner so proof-of-work uses idle
# CPU but instantly yields to networking, handshakes, RPC, and the UI (never starving
# them). Wraps the native priority APIs so this crate stays `unsafe`-free.
thread-priority = "3"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
