[package]
name = "sov-types"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core ledger types for SOV: transactions, blocks, and receipts."

[dependencies]
sov-primitives = { path = "../primitives" }
sov-crypto = { path = "../crypto" }
sov-pow = { path = "../pow" }
sov-compliance = { path = "../compliance" }
sov-intents = { path = "../intents" }
borsh.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
