[package]
name = "sov-verify"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SOV verification & validity assurance: protocol-wide invariants (supply cap, per-source emission budgets, value conservation, no unauthorized mint) checked as exact integer mathematics over real chain state."

[dependencies]
sov-primitives = { path = "../primitives" }
sov-state = { path = "../state" }
sov-mining = { path = "../mining" }
thiserror.workspace = true

# Test-only: driving a real Blockchain to exercise the invariants over genuine
# block production and to prove deterministic cross-node replay. Kept out of the
# library's dependency surface, which stays minimal.
[dev-dependencies]
sov-chain = { path = "../chain" }
sov-compliance = { path = "../compliance" }
sov-types = { path = "../types" }
sov-crypto = { path = "../crypto" }
sov-pow = { path = "../pow" }
proptest = "1"
borsh.workspace = true
serde_json = "1"
hex.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
